--- a/index.ipynb
+++ b/index.ipynb
@@ -155,7 +155,8 @@
    },
    "outputs": [],
    "source": [
-    "name = \"Ceo\" # 'CEO'\n"
+    "name = \"Ceo\" # 'CEO'\n",
+    "name.upper()"
    ]
   },
   {
